add new api server endpoint: GET /api/employee_hours/list_all
